--- a/SunChaser/app/src/main/res/values/colors.xml
+++ b/SunChaser/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="weather_bg_gradient">#1E3A8A</color>
 </resources>
