--- a/SunChaser/app/src/main/res/layout/item_daily_forecast.xml
+++ b/SunChaser/app/src/main/res/layout/item_daily_forecast.xml
@@ -6,8 +6,8 @@
     android:layout_marginBottom="8dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="4dp"
-    app:cardBackgroundColor="#40FFFFFF"
-   >
+    android:layout_margin="8dp"
+    >
 
 
 <LinearLayout
@@ -16,7 +16,7 @@
         android:orientation="horizontal"
         android:padding="16dp"
         android:gravity="center_vertical"
-    android:background="@drawable/bg_gradient_sky">
+        android:background="@color/ic_launcher_background">
 
         <TextView
             android:id="@+id/tvDay"
