--- a/SunChaser/app/src/main/res/layout/item_hourly_forecast.xml
+++ b/SunChaser/app/src/main/res/layout/item_hourly_forecast.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    app:cardCornerRadius="50dp"
+    app:cardElevation="4dp"
+    android:layout_margin="8dp"
+    android:background="@color/ic_launcher_background">
+
+<LinearLayout
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="12dp"
-    android:background="@drawable/bg_gradient_sky">
+    android:background="@color/ic_launcher_background">
 
     <TextView
         android:id="@+id/tvHour"
@@ -30,3 +41,4 @@
         android:layout_marginTop="4dp"
         android:textStyle="bold" />
 </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
