--- a/SunChaser/app/src/main/res/layout/item_alert.xml
+++ b/SunChaser/app/src/main/res/layout/item_alert.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-   android:background="@drawable/bg_card" >
+   android:background="@drawable/bg_card"
+    android:layout_marginVertical="30dp">
 
     <TextView
         android:id="@+id/tvLocation"
@@ -29,5 +29,6 @@
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/delete" />
+        android:text="@string/delete"
+        android:backgroundTint="@color/purple"/>
 </LinearLayout>
